Styled the height of the gallery images on the homepage and added the second image

--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-light header-background navbar-expand-lg fixed-top">
+        <nav class="navbar navbar-light header-background navbar-expand-lg">
             <a class="navbar-brand" href="home.html">
               <img class="logo-size" src="/assets/images/lincoln.png" alt="Lincoln Highway Road Trip logo">
             </a>
@@ -50,21 +50,23 @@
     </header>
 
     <section>
+      <div class="row">
+        
 
-    <div id="slideshow-example" data-component="slideshow">
-      <div role="list">
+       <div class="col-12" id="slideshow-example" data-component="slideshow">
+         <div role="list">
+           <div class="slide">
+            <img class="image-size" src="assets/images/forest.jpg" alt="Image of a country road with tall trees">
+          </div>
         <div class="slide">
-          <img src="assets/images/forest.jpg" alt="Image of a country road with tall trees">
-        </div>
-        <div class="slide">
-          <img src="" alt="">
+          <img class="image-size" src="assets/images/coffee-pot.jpg" alt="Image of the Bedford coffee pot house">
         </div>
         <div class="slide">
           <img src="" alt="">
         </div>
       </div>
     </div>
-    
+  </div>
     </section>
 
     <footer>
