Started adding a Covid alert to the homepage using Bootstrap

--- a/home.html
+++ b/home.html
@@ -50,6 +50,14 @@
             </div>    
           </nav>
     </header>
+
+    <div class="alert alert-info alert-dismissible fade show alert-margin" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+      Keep in mind that COVID-19 restrictions may be in place. Learn more about restrictions in Pennsylvania <a href="https://www.health.pa.gov/topics/disease/coronavirus/Pages/Travelers.aspx" target="_blank" class="alert-link">here</a>.
+    </div>
+
     <section class="banner-background">
       <h1 class="bn-txt-pos">Lincoln Highway Roadtrip: Pennsylvania</h1>
     </section>
