Add a new image to the slider. Connected the maps page to the Explore button on the home page.

--- a/home.html
+++ b/home.html
@@ -84,6 +84,10 @@
               <img class="image-size" src="assets/images/gettysburg.jpg" alt="Image of cannon in Gettysburg National Park">
         </div>
 
+        <div class="mySlides fade-style">
+          <img class="image-size" src="assets/images/steamboat-inn.jpeg" alt="Image of Fulton Steamboat Inn">
+        </div>
+
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
         <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
@@ -94,13 +98,14 @@
         <span class="dot" onclick="currentSlide(1)"></span>
         <span class="dot" onclick="currentSlide(2)"></span>
         <span class="dot" onclick="currentSlide(3)"></span>
+        <span class="dot" onclick="currentSlide(4)"></span>
       </div>
         
     </section>  
 
     <section class="exp-btn-pos">
       <div>
-        <a href="#" class="explore-btn">
+        <a href="lincoln-highway-map.html" class="explore-btn">
          Explore
         </a>
       </div>
