Add the map from Google Maps to this page. Added a space on the page to put in information about each destination

--- a/lincoln-highway-map.html
+++ b/lincoln-highway-map.html
@@ -73,12 +73,20 @@
     </div>
 
     <section class="banner-background">
-      <h1 class="bn-txt-pos">Plan your road trip here!</h1>
+      <h1 class="bn-txt-pos">The road trip plans</h1>
     </section>
 
     <section>
-      <div id="map">
+      <div class="row">
+        <div class="col-md-8">
+          <div id="map">
 
+          </div>
+        </div>
+
+        <div class="col-md-4">
+
+        </div>
       </div>
     </section>
 
@@ -196,6 +204,7 @@
     
   <script src="assets/js/contactButton.js"></script>
   <script src="assets/js/emailJS.js"></script>
+  <script src="assets/js/maps.js"></script>
     
 </body>
 </html>
