Add banner styles and text for this page to appear over the map

--- a/lincoln-highway-map.html
+++ b/lincoln-highway-map.html
@@ -21,7 +21,7 @@
       })();
     </script> 
 
-    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCL9D8PL6MHBPThnZpi1xUlGQcka4TVAJc&callback=initMap"></script>
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCL9D8PL6MHBPThnZpi1xUlGQcka4TVAJc&map_ids=1a97cdea16f163b5&callback=initMap"></script>
     <script src="https://unpkg.com/@googlemaps/markerclustererplus/dist/index.min.js"></script>
 
     <title>Lincoln Highway Road Trip</title>
@@ -72,8 +72,8 @@
       <a href="https://www.health.pa.gov/topics/disease/coronavirus/Pages/Travelers.aspx" target="_blank" class="alert-link" rel="noopener">here</a>.
     </div>
 
-    <section class="banner-background">
-      <h1 class="bn-txt-pos">The road trip plans</h1>
+    <section class="map-background">
+      <h1 class="bn-txt-pos">Your Journey Down Route 30</h1>
     </section>
 
     <section>
@@ -85,6 +85,10 @@
         </div>
 
         <div class="col-md-4">
+
+        </div>
+
+        <div class="col-12">
 
         </div>
       </div>
