--- a/lincoln-highway-map.html
+++ b/lincoln-highway-map.html
@@ -45,20 +45,23 @@
                 <li class="nav-item">
                   <a class="nav-link" href="home.html">Home</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">About Route 30</a>
-                </li>
+
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="lincoln-highway-map.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Plan Your Trip
                   </a>
                   <div class="dropdown-menu dropdown-background" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Map 1</a>
+                    <a class="dropdown-item" href="lincoln-highway-map.html">Map 1</a>
                     <a class="dropdown-item" href="#">Map 2</a>
                     <a class="dropdown-item" href="#">Map 3</a>
                     <a class="dropdown-item" href="#">Map 4</a>
                   </div>
                 </li>
+
+                <li class="nav-item">
+                  <a class="nav-link" href="#">About Route 30</a>
+                </li>
+            
               </ul>
             </div>    
           </nav>
@@ -73,10 +76,10 @@
     </div>
 
     <section class="map-background">
-      <h1 class="bn-txt-pos">Your Journey Down Route 30</h1>
+      <h1 class="bn-txt-pos2">Your Journey Down Route 30</h1>
     </section>
 
-    <section>
+    <section class="map-top-padding">
       <div class="row">
         <div class="col-md-8">
           <div id="map">
@@ -85,11 +88,20 @@
         </div>
 
         <div class="col-md-4">
-
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+            Nunc vitae rhoncus neque, a mattis nulla. 
+            Mauris vel mi cursus purus maximus fermentum. 
+            Praesent pulvinar finibus mauris quis suscipit. 
+            Fusce volutpat vehicula augue, a finibus orci cursus pretium. 
+            Aliquam interdum magna aliquet urna interdum porta. 
+            Aliquam volutpat erat id elit fringilla ullamcorper. 
+          </p>
         </div>
 
-        <div class="col-12">
-
+        <div class="col-12 exp-btn-pos">
+          <a href="lincoln-highway-map.html" class="explore-btn">
+            Explore
+           </a>
         </div>
       </div>
     </section>
