Start adding section of map page with additional information about each location, such ashotels and restaurants

--- a/lincoln-highway-map.html
+++ b/lincoln-highway-map.html
@@ -59,7 +59,7 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="#">About Route 30</a>
+                  <a class="nav-link" href="about-the-highway.html">About Route 30</a>
                 </li>
             
               </ul>
@@ -88,7 +88,13 @@
         </div>
 
         <div class="col-md-4">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+          <h2>
+            <strong>
+              Lorem ipsum dolor
+            </strong>
+          </h2>
+          <br>
+          <p>Sit amet, consectetur adipiscing elit. 
             Nunc vitae rhoncus neque, a mattis nulla. 
             Mauris vel mi cursus purus maximus fermentum. 
             Praesent pulvinar finibus mauris quis suscipit. 
@@ -96,12 +102,42 @@
             Aliquam interdum magna aliquet urna interdum porta. 
             Aliquam volutpat erat id elit fringilla ullamcorper. 
           </p>
+          <br>
+          <a>More info</a>
         </div>
+      </div>
+    </section>
 
-        <div class="col-12 exp-btn-pos">
-          <a href="lincoln-highway-map.html" class="explore-btn">
-            Explore
-           </a>
+    <section>
+      <div class="col-12 exp-btn-pos newsletter-button">
+        <a href="lincoln-highway-map.html" class="explore-btn">
+          Get our Newsletter!
+         </a>
+      </div>
+    </section>
+
+    <section class="map-top-padding">
+      <div class="row">
+        <div class="col-12">
+          <h3><strong>Things to do in Pittsburgh</strong></h3>
+        </div>
+        <div class="col-xl-4">
+          <img src="assets/images/pittsburgh2.jpg" class="map-pg-img" alt="Image of Pittsburgh skyline">
+        </div>
+        <div class="col-xl-8">
+          
+          <p>
+            <strong>Where to eat:</strong>
+            <br>
+            Sit amet, consectetur adipiscing elit. 
+            Nunc vitae rhoncus neque, a mattis nulla. 
+            Mauris vel mi cursus purus maximus fermentum. 
+            Praesent pulvinar finibus mauris quis suscipit. 
+            Fusce volutpat vehicula augue, a finibus orci cursus pretium. 
+            Aliquam interdum magna aliquet urna interdum porta. 
+            Aliquam volutpat erat id elit fringilla ullamcorper. 
+          </p>
+
         </div>
       </div>
     </section>
@@ -142,7 +178,7 @@
               <textarea id="enquiry" name="enquiry" cols="45" rows="8" aria-label="Fill in comments in this text area" required></textarea>
               <br>
               <br>
-              <input type="submit" value="Send" onsubmit="return sendMail(this);" class="newsletter-button btn btn-outline-light" aria-label="Submit this form">
+              <input type="submit" value="Send" onsubmit="return sendMail(this);" class="btn btn-outline-light" aria-label="Submit this form">
            </form>
          </div>
        </div>
