Restrict API key for the GoogleMaps API

--- a/lincoln-highway-map.html
+++ b/lincoln-highway-map.html
@@ -21,8 +21,8 @@
       })();
     </script> 
 
-    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCL9D8PL6MHBPThnZpi1xUlGQcka4TVAJc&map_ids=1a97cdea16f163b5&callback=initMap"></script>
-    <script src="https://unpkg.com/@googlemaps/markerclustererplus/dist/index.min.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCL9D8PL6MHBPThnZpi1xUlGQcka4TVAJc&map_ids=1a97cdea16f163b5&callback=initMap"></script>
+  
 
     <title>Lincoln Highway Road Trip</title>
     <link rel="shortcut icon" href="assets/images/favicon.ico"/>
@@ -87,7 +87,7 @@
           </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4" id="sideCard">
           <h2>
             <strong>
               Lorem ipsum dolor
