--- a/home.html
+++ b/home.html
@@ -50,7 +50,7 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="#">About Route 30</a>
+                  <a class="nav-link" href="about-the-highway.html">About Route 30</a>
                 </li>
               </ul>
             </div>    
@@ -165,7 +165,7 @@
               <textarea id="enquiry" name="enquiry" cols="45" rows="8" aria-label="Fill in comments in this text area" required></textarea>
               <br>
               <br>
-              <input type="submit" value="Send" onsubmit="return sendMail(this);" class="newsletter-button btn btn-outline-light" aria-label="Submit this form">
+              <input type="submit" value="Send" onsubmit="return sendMail(this);" class="btn btn-outline-light" aria-label="Submit this form">
            </form>
          </div>
        </div>
