Update position of navigation links

--- a/home.html
+++ b/home.html
@@ -37,20 +37,24 @@
                   <a class="nav-link" href="home.html">Home</a>
                 </li>
 
+                <li class="nav-item">
+                  <a class="nav-link" href="about-the-highway.html">About Route 30</a>
+                </li>
+
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="lincoln-highway-map.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Plan Your Trip
                   </a>
                   <div class="dropdown-menu dropdown-background" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="lincoln-highway-map.html">Map 1</a>
-                    <a class="dropdown-item" href="#">Map 2</a>
-                    <a class="dropdown-item" href="#">Map 3</a>
-                    <a class="dropdown-item" href="#">Map 4</a>
+                    <a class="dropdown-item" href="lincoln-highway-map.html">Map it out</a>
+                    <a class="dropdown-item" href="#Pittsburgh">Pittsburgh</a>
+                    <a class="dropdown-item" href="#Fallingwater">Fallingwater</a>
+                    <a class="dropdown-item" href="#Bedford">Bedford</a>
+                    <a class="dropdown-item" href="#Gettysburg">Gettysburg</a>
+                    <a class="dropdown-item" href="#Harrisburg">Harrisburg</a>
+                    <a class="dropdown-item" href="#Lancaster">Lancaster</a>
+                    <a class="dropdown-item" href="#Philadelphia">Philadelphia</a>
                   </div>
-                </li>
-
-                <li class="nav-item">
-                  <a class="nav-link" href="about-the-highway.html">About Route 30</a>
                 </li>
               </ul>
             </div>    
