Add styles for contact form pop-up to account for sticky header on map page

--- a/home.html
+++ b/home.html
@@ -150,7 +150,7 @@
 
           <div class="contact-pop">
   
-            <span class="close-form">&times;</span>
+            <span id="close-form">&times;</span>
   
             <form aria-label="Send us your comments, ideas, or feedback" id="contactForm">
             
