Add sticky header on map page to make it easier to navigate the page

--- a/lincoln-highway-map.html
+++ b/lincoln-highway-map.html
@@ -116,7 +116,7 @@
 
     <section>
       <div class="col-12 exp-btn-pos mobile-news-btn newsletter-button"> 
-        <a class="explore-btn" id="newsletterButton">
+        <a class="news-btn-styles" id="newsletterButton">
           Get our Newsletter!
          </a>
       </div>
@@ -125,7 +125,7 @@
 
         <div class="contact-pop newsletter-pop">
 
-          <span class="close-form">&times;</span>
+          <span id="close-form2">&times;</span>
 
           <form aria-label="Subscribe to our Newsletter" id="newsletterForm">
             <h1 class="mobile-heading form-heading">Subscribe!</h1>
@@ -413,7 +413,7 @@
 
           <div class="contact-pop">
   
-            <span class="close-form">&times;</span>
+            <span id="close-form">&times;</span>
   
             <form aria-label="Send us your comments, ideas, or feedback" id="contactForm">
             
