Add desktop styles for page content

--- a/about-the-highway.html
+++ b/about-the-highway.html
@@ -79,10 +79,12 @@
     <section class="banner-background">
       <h1 class="bn-txt-pos">The Lincoln Highway in Pennsylvania</h1>
     </section>
+
+    <section>
       <div class="row">
-        <div class="col">
+        <div class="col about-content header-background">
           <h2>The history of the Lincoln Highway</h2>
-          <img src="assets/images/historical-postcard.jpg" alt="Historical postcard of the Lincoln Highway in 1920s">
+          <img src="assets/images/historical-postcard.jpg" class="postcard-img" alt="Historical postcard of the Lincoln Highway in 1920s">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
           Fusce sit amet accumsan diam, vel porttitor leo. 
           Aliquam erat volutpat. 
@@ -100,11 +102,13 @@
         </div>
       </div>
 
+    </section>  
+
     <section>
       <div class="row">
-        <div class="col">
+        <div class="col about-content header-background">
           <h2>About Pennsylvania</h2>
-          <img src="assets/images/independence-hall.jpg" alt="Image of Independence Hall in Philadelphia">
+          <img src="assets/images/independence-hall.jpg" class="ind-hall-img" alt="Image of Independence Hall in Philadelphia">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
             Fusce sit amet accumsan diam, vel porttitor leo. 
             Aliquam erat volutpat. 
@@ -122,10 +126,6 @@
         </div>
 
       </div>
-
-    </section>
-
-    <section>
 
     </section>
       
