--- a/lincoln-highway-map.html
+++ b/lincoln-highway-map.html
@@ -31,7 +31,7 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-light header-background navbar-expand-lg fixed-top">
+        <nav class="navbar navbar-light header-background navbar-expand-lg" id="sticky">
             <a class="navbar-brand" href="home.html">
               <img class="logo-size" src="/assets/images/lincoln.png" alt="Lincoln Highway Road Trip logo">
             </a>
@@ -84,7 +84,7 @@
     </section>
 
     <section class="map-top-padding mobile-map-padding">
-      <div class="row col-reverse">
+      <div class="row">
 
         <div class="col-xl-8 col-md-12">
           <div id="map">
