Fix anchor links in header dropdown navigation for GitHub pages

--- a/lincoln-highway-map.html
+++ b/lincoln-highway-map.html
@@ -56,13 +56,13 @@
                   </a>
                   <div class="dropdown-menu dropdown-background" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="lincoln-highway-map.html">Map it out</a>
-                    <a class="dropdown-item" href="#Pittsburgh">Pittsburgh</a>
-                    <a class="dropdown-item" href="#Fallingwater">Fallingwater</a>
-                    <a class="dropdown-item" href="#Bedford">Bedford</a>
-                    <a class="dropdown-item" href="#Gettysburg">Gettysburg</a>
-                    <a class="dropdown-item" href="#Harrisburg">Harrisburg</a>
-                    <a class="dropdown-item" href="#Lancaster">Lancaster</a>
-                    <a class="dropdown-item" href="#Philadelphia">Philadelphia</a>
+                    <a class="dropdown-item" href="lincoln-highway-map.html/#Pittsburgh">Pittsburgh</a>
+                    <a class="dropdown-item" href="lincoln-highway-map.html/#Fallingwater">Fallingwater</a>
+                    <a class="dropdown-item" href="lincoln-highway-map.html/#Bedford">Bedford</a>
+                    <a class="dropdown-item" href="lincoln-highway-map.html/#Gettysburg">Gettysburg</a>
+                    <a class="dropdown-item" href="lincoln-highway-map.html/#Harrisburg">Harrisburg</a>
+                    <a class="dropdown-item" href="lincoln-highway-map.html/#Lancaster">Lancaster</a>
+                    <a class="dropdown-item" href="lincoln-highway-map.html/#Philadelphia">Philadelphia</a>
                   </div>
                 </li>
             
