Test for map page anchor links on GitHub pages

--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
                   </a>
                   <div class="dropdown-menu dropdown-background" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="lincoln-highway-map.html">Map it out</a>
-                    <a class="dropdown-item" href="#Pittsburgh">Pittsburgh</a>
+                    <a class="dropdown-item" href="lincoln-highway-map.html#Pittsburgh">Pittsburgh</a>
                     <a class="dropdown-item" href="#Fallingwater">Fallingwater</a>
                     <a class="dropdown-item" href="#Bedford">Bedford</a>
                     <a class="dropdown-item" href="#Gettysburg">Gettysburg</a>
