Move script tags to the end of the body

--- a/lincoln-highway-map.html
+++ b/lincoln-highway-map.html
@@ -11,19 +11,6 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    
-    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
-    <script>(function(){
-      emailjs.init("user_MlMdk5SWptu2RtsNn6Osk");
-      })();
-    </script> 
-
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCL9D8PL6MHBPThnZpi1xUlGQcka4TVAJc&map_ids=1a97cdea16f163b5&callback=initMap"></script>
-  
-
     <title>Lincoln Highway Road Trip</title>
     <link rel="shortcut icon" href="assets/images/favicon.ico"/>
 
@@ -56,7 +43,7 @@
                   </a>
                   <div class="dropdown-menu dropdown-background" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="lincoln-highway-map.html">Map it out</a>
-                    <a class="dropdown-item" href="lincoln-highway-map.html/#Pittsburgh">Pittsburgh</a>
+                    <a class="dropdown-item" href="lincoln-highway-map.html#Pittsburgh">Pittsburgh</a>
                     <a class="dropdown-item" href="lincoln-highway-map.html/#Fallingwater">Fallingwater</a>
                     <a class="dropdown-item" href="lincoln-highway-map.html/#Bedford">Bedford</a>
                     <a class="dropdown-item" href="lincoln-highway-map.html/#Gettysburg">Gettysburg</a>
@@ -524,6 +511,12 @@
     </div>  
   </footer>
   
+  
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  
   <script src="assets/js/activeLink.js"></script>
   <script src="assets/js/contactButton.js"></script>
   <script src="assets/js/newsletterButton.js"></script>
@@ -531,6 +524,15 @@
   <script src="assets/js/emailJS.js"></script>
   <script src="assets/js/maps.js"></script>
   <script src="assets/js/readMore.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+  <script>(function(){
+    emailjs.init("user_MlMdk5SWptu2RtsNn6Osk");
+    })();
+  </script>
+
+  <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCL9D8PL6MHBPThnZpi1xUlGQcka4TVAJc&map_ids=1a97cdea16f163b5&callback=initMap"></script>
+
     
 </body>
 </html>
