Update to header link for homepage

--- a/lincoln-highway-map.html
+++ b/lincoln-highway-map.html
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto link-styles">
                 <li class="nav-item">
-                  <a class="nav-link" href="home.html">Home</a>
+                  <a class="nav-link" href="index.html">Home</a>
                 </li>
 
                 <li class="nav-item">
@@ -121,7 +121,7 @@
             <input id="email-newsletter" type="email" name="subscriber_email" placeholder="example@email.com" class="label-width" aria-label="Email Address" required>
             <br>
             <br>
-            <input type="submit" value="Send" onsubmit="return sendMail(this);" class="btn btn-outline-light" aria-label="Submit this form">
+            <input type="submit" value="Send" class="btn btn-outline-light" aria-label="Submit this form">
          </form>
        </div>
      </div>
@@ -435,7 +435,7 @@
               <textarea id="enquiry" name="enquiry" cols="45" rows="8" aria-label="Fill in comments in this text area" required></textarea>
               <br>
               <br>
-              <input type="submit" value="Send" onsubmit="return sendMail(this);" class="btn btn-outline-light" aria-label="Submit this form">
+              <input type="submit" value="Send" class="btn btn-outline-light" aria-label="Submit this form">
            </form>
          </div>
        </div>
