--- a/lincoln-highway-map.html
+++ b/lincoln-highway-map.html
@@ -22,7 +22,7 @@
       <!--Bootstrap navigation-->
 
         <nav class="navbar navbar-light header-background navbar-expand-lg">
-            <a class="navbar-brand" href="home.html">
+            <a class="navbar-brand" href="index.html">
               <img class="logo-size" src="/assets/images/lincoln.png" alt="Lincoln Highway Road Trip logo">
             </a>
 
