--- a/about-the-highway.html
+++ b/about-the-highway.html
@@ -239,6 +239,12 @@
   <script src="assets/js/contactButton.js"></script>
   <script src="assets/js/emailJS.js"></script>
 
+  <!--Sweet Alert--> 
+
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
+   <!--EmailJS-->
+
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
   <script>(function(){
     emailjs.init("user_MlMdk5SWptu2RtsNn6Osk");
