--- a/index.html
+++ b/index.html
@@ -265,6 +265,10 @@
   <script src="assets/js/emailJS.js"></script>
   <script src="assets/js/slider.js"></script>
 
+  <!--Sweet Alert--> 
+
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
   <!--EmailJS-->
 
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
