--- a/lincoln-highway-map.html
+++ b/lincoln-highway-map.html
@@ -566,6 +566,10 @@
   <script src="assets/js/maps.js"></script>
   <script src="assets/js/readMore.js"></script>
 
+ <!--Sweet Alert--> 
+
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
   <!--EmailJS-->
 
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
