Add Google Places library to API

--- a/lincoln-highway-map.html
+++ b/lincoln-highway-map.html
@@ -110,7 +110,7 @@
             Aliquam volutpat erat id elit fringilla ullamcorper. 
           </p>
           <br>
-          <a href="#Pittsburgh" class="read-more-btn">More info</a>
+          <a href="#Pittsburgh" class="more-info-btn">More info</a>
         </div>
       </div>
       
@@ -558,7 +558,7 @@
   
   <!--JavaScript files on site-->
 
-  <script src="assets/js/activeLink.js"></script>
+  
   <script src="assets/js/contactButton.js"></script>
   <script src="assets/js/newsletterButton.js"></script>
   <script src="assets/js/newsletterEmail.js"></script>
@@ -580,7 +580,7 @@
 
   <!--Google Maps-->
 
-  <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCL9D8PL6MHBPThnZpi1xUlGQcka4TVAJc&map_ids=1a97cdea16f163b5&callback=initMap"></script>
+  <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCL9D8PL6MHBPThnZpi1xUlGQcka4TVAJc&map_ids=1a97cdea16f163b5&libraries=places&callback=initMap"></script>
 
     
 </body>
