Update all JS sources in HTML pages

--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@
     
   <!--JavaScript files on site-->
 
-  <script src="assets/js/contactButton.js"></script>
-  <script src="assets/js/emailJS.js"></script>
+  <script src="assets/js/contact-button.js"></script>
+  <script src="assets/js/email-js.js"></script>
   <script src="assets/js/slider.js"></script>
 
   <!--Sweet Alert--> 
