--- a/lincoln-highway-map.html
+++ b/lincoln-highway-map.html
@@ -563,12 +563,12 @@
   <!--JavaScript files on site-->
 
   
-  <script src="assets/js/contactButton.js"></script>
-  <script src="assets/js/newsletterButton.js"></script>
-  <script src="assets/js/newsletterEmail.js"></script>
-  <script src="assets/js/emailJS.js"></script>
+  <script src="assets/js/contact-button.js"></script>
+  <script src="assets/js/newsletter-button.js"></script>
+  <script src="assets/js/newsletter-email.js"></script>
+  <script src="assets/js/email-js.js"></script>
   <script src="assets/js/maps.js"></script>
-  <script src="assets/js/readMore.js"></script>
+  <script src="assets/js/read-more.js"></script>
 
  <!--Sweet Alert--> 
 
