Add input to the map div that connects to the SearchBox in the maps JS

--- a/lincoln-highway-map.html
+++ b/lincoln-highway-map.html
@@ -87,6 +87,11 @@
         <!--Map-->
 
         <div class="col-xl-8 col-md-12" id="map-jump">
+
+          <!--Map Search-->
+
+          <input id="map-search" class="controls" type="text" placeholder="Search for places to stop!">
+
           <div id="map">
 
           </div>
