Remove initMap from the Google Maps API script. Use Google Places API to call map and markers instead

--- a/lincoln-highway-map.html
+++ b/lincoln-highway-map.html
@@ -593,7 +593,7 @@
 
   <!--Google Maps-->
 
-  <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCL9D8PL6MHBPThnZpi1xUlGQcka4TVAJc&map_ids=1a97cdea16f163b5&libraries=places&callback=initMap"></script>
+  <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCL9D8PL6MHBPThnZpi1xUlGQcka4TVAJc&map_ids=1a97cdea16f163b5&libraries=places"></script>
 
     
 </body>
