--- a/lincoln-highway-map.html
+++ b/lincoln-highway-map.html
@@ -90,11 +90,12 @@
 
           <!--Map Search-->
 
-          <input id="map-search" class="controls" type="text" placeholder="Search for places to stop!">
-
           <div id="map">
-
           </div>
+          <div class="map-search-pos">
+            <h3>Search for places to stop along the route!</h3>
+            <input id="map-search" class="controls" type="text" placeholder="Press Enter to search">
+          </div>  
         </div>
 
         <!--Map cards-->
@@ -127,7 +128,7 @@
 
       <!--Pop-out Button-->
 
-      <div class="col-12 exp-btn-pos mobile-news-btn newsletter-button"> 
+      <div class="col-12 mobile-news-btn newsletter-button"> 
         <a class="news-btn-styles" id="newsletterButton">
           Get our Newsletter!
          </a>
