--- a/404.html
+++ b/404.html
@@ -4,13 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru:wght@400;500&family=Poppins:wght@400;500;600&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">  
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
+
+    <title>Lincoln Highway Road Trip</title>
+    <link rel="shortcut icon" href="assets/images/favicon.ico"/>
+
 </head>
 <body>
-    <div class="row">
+    <div class="row four-four-background">
         <div class="col">
-            <img src="assets/images/turn-around.gif" alt="Gif of Phil avoiding train in Groundhog's Day">
-            <h1> 404 error: Looks like you're lost, friend! <a href="home.html">Turn around here</a></h1>
+            <h1 class="ff-text"> 404 error: Looks like you're lost, friend! <a href="home.html">Turn around here</a></h1>
+            <img src="assets/images/turn-around.gif" class="ff-img" alt="Gif of Phil avoiding train in Groundhog's Day">
+            
         </div>
     </div>
 </body>
