--- a/lincoln-highway-map.html
+++ b/lincoln-highway-map.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Lincoln Highway Road Trip</title>
+
+    <!--Favicon-->
     <link rel="shortcut icon" href="assets/images/favicon.ico"/>
 
 </head>
@@ -106,14 +108,15 @@
               Pittsburgh
             </strong>
           </h2>
-          <br>
-          <p>Sit amet, consectetur adipiscing elit. 
-            Nunc vitae rhoncus neque, a mattis nulla. 
-            Mauris vel mi cursus purus maximus fermentum. 
-            Praesent pulvinar finibus mauris quis suscipit. 
-            Fusce volutpat vehicula augue, a finibus orci cursus pretium. 
-            Aliquam interdum magna aliquet urna interdum porta. 
-            Aliquam volutpat erat id elit fringilla ullamcorper. 
+          <p>Start your trip in Pittsburgh, the second largest city in Pennsylvania. 
+            This city is located in the far southwestern part of the state, on the Allegheny plateau. 
+            Many of its distinctive neighborhoods are built right into the these mountainous foothills. 
+            Other parts of Pittsburgh are shaped around its iconic three rivers: the Ohio, Monongahela, and Allegheny. 
+            Pittsburgh was once one of the most industrialised cities in the world, but in the post-industrial era it has 
+            focused on becoming a hub of higher education. 
+            With the Andy Warhol and Carnegie museums located in the city, Pittsburgh is also considered an artistic 
+            stronghold in Pennsylvania. 
+            It’s regularly listed as the most livable city in the US.  
           </p>
           <br>
           <a href="#Pittsburgh" class="more-info-btn">More info</a>
